@@ -1675,7 +1675,7 @@ Pbuild_file_symtab(struct ps_prochandle *P, file_info_t *fptr)
 	/*
 	 * Now iterate through the section cache in order to locate info
 	 * for the .symtab, .dynsym, .SUNW_ldynsym, .dynamic, .plt,
-	 * and .SUNW_ctf sections:
+	 * and .dtrace_ctf sections:
 	 */
 	for (i = 1, cp = cache + 1; i < nshdrs; i++, cp++) {
 		GElf_Shdr *shp = &cp->c_shdr;
@@ -1728,7 +1728,10 @@ Pbuild_file_symtab(struct ps_prochandle *P, file_info_t *fptr)
 			dyn = cp;
 		} else if (strcmp(cp->c_name, ".plt") == 0) {
 			plt = cp;
-		} else if (strcmp(cp->c_name, ".SUNW_ctf") == 0) {
+		} else if ((strcmp(cp->c_name, ".dtrace_ctf") == 0) ||
+			   (strncmp(cp->c_name, ".dtrace_ctf.",
+			       strlen (".dtrace_ctf.")) == 0))
+		{
 			/*
 			 * Skip over bogus CTF sections so they don't come back
 			 * to haunt us later.
@@ -1736,7 +1739,7 @@ Pbuild_file_symtab(struct ps_prochandle *P, file_info_t *fptr)
 			if (shp->sh_link == 0 ||
 			    shp->sh_link >= nshdrs ||
 			    (cache[shp->sh_link].c_shdr.sh_type != SHT_DYNSYM &&
-			    cache[shp->sh_link].c_shdr.sh_type != SHT_SYMTAB)) {
+				cache[shp->sh_link].c_shdr.sh_type != SHT_SYMTAB)) {
 				_dprintf("Bad sh_link %d for "
 				    "CTF\n", shp->sh_link);
 				continue;
